Complete manual Code review and editing to fit business need and run correctly